--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<input type="text" id="text"><br>
 		<input type="email" id="email"><br>
 		<button>Save</button>
+		<h1>Testing the world</h1>
 	</form>
 
 <script type="text/javascript" src="app.js"></script>	
