--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<button>Save</button>
 		<h1>Testing the world</h1>
 	</form>
+	<p>I am moving forward</p>
 
 <script type="text/javascript" src="app.js"></script>	
 
